// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app action creators creates APP_ERROR action 1`] = `
Object {
  "error": true,
  "payload": [Error: foo],
  "type": "esk/app/ERROR",
}
`;

exports[`app action creators creates APP_ONLINE action 1`] = `
Object {
  "payload": Object {
    "online": true,
  },
  "type": "esk/app/ONLINE",
}
`;

exports[`app reducer handles APP_ERROR 1`] = `
Object {
  "error": [Error: bar],
  "online": false,
  "started": false,
}
`;

exports[`app reducer handles APP_ONLINE 1`] = `
Object {
  "error": null,
  "online": true,
  "started": false,
}
`;

exports[`app reducer handles APP_STARTED (dispatched after rehydrate) 1`] = `
Object {
  "error": null,
  "online": false,
  "started": false,
}
`;

exports[`app reducer maps all actions ending with FAILURE to APP_ERROR 1`] = `
Object {
  "error": [Error: foo],
  "online": false,
  "started": false,
}
`;
